# subagentjobs

./: .gitignore  .gitmodules  .mcp.json  .vendors.toml  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  SPEC.md  cloudflare.toml  rust-toolchain.toml
.agents/skills/cardputer-buddy/: SKILL.md
.agents/skills/docs-crawler/: SKILL.md
.agents/skills/m5-onboard/: SKILL.md
.agents/skills/source-command-maker-setup/: SKILL.md
.cargo/: config.toml
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/agents/: a2a-bridge.yaml  cargo-check.yaml  crawler.yaml  deployer.yaml  design-coworker.yaml  engineering-coworker.yaml  indexer.yaml  migrator.yaml  vendor-sync.yaml
.claude/commands/: maker-setup.md
.claude/skills/cardputer-buddy/: SKILL.md
.claude/skills/cf-worker-deploy/: SKILL.md
.claude/skills/docs-crawler/: SKILL.md
.claude/skills/m5-onboard/: SKILL.md
.codex/: config.toml  hooks.json
.github/workflows/: check.yml  wc2026.yml
apps/coworkers-desktop-buddy/: COWORKERS-PLATFORM.md  Cargo.toml  Makefile  Package.swift
apps/coworkers-desktop-buddy/Sources/BuddyApp/: ASCIIArtRenderer.swift  AsciiPetView.swift  BuddyApp.swift  BuddyWindow.swift  CharacterDisplayView.swift  GIFPlayerView.swift  HardwareBuddyLink.swift  Info.plist
apps/coworkers-desktop-buddy/Sources/BuddyCLI/: main.swift
apps/coworkers-desktop-buddy/Sources/BuddyCore/: BuddyState.swift  CharacterController.swift  CharacterManifest.swift  CharacterState.swift  ClaudeSummariser.swift  HardwareBuddyProtocol.swift  SessionPoller.swift
apps/coworkers-desktop-buddy/Sources/ClaudeAPI/: APIError.swift  ClaudeClient.swift  Configuration.swift  ContentBlock.swift  HTTPTransport.swift  JSONValue.swift  Message.swift  MessagesRequest.swift  MessagesResponse.swift  SSEParser.swift  StreamEvent.swift  Telemetry.swift  ThinkingConfig.swift  ToolDefinition.swift
apps/coworkers-desktop-buddy/Tests/BuddyCoreTests/: AuthConfigTests.swift  BuddyStateTests.swift  CharacterManifestTests.swift  CharacterStateTests.swift  HardwareBuddyProtocolTests.swift  SessionIndexParsingTests.swift
apps/coworkers-desktop-buddy/src/: main.rs  protocol.rs
crates/a2a-bridge/: Cargo.toml
crates/a2a-bridge/src/: main.rs
crates/a2a-node/: Cargo.toml
crates/acp-bridge/: Cargo.toml
crates/agent-gen/: Cargo.toml
crates/agent-gen/src/: agents.rs  main.rs
crates/design-coworker/: Cargo.toml
crates/design-coworker/src/: design.rs  main.rs
crates/docs-crawler/: Cargo.toml
crates/docs-crawler/.cache/: mdx-lru.json
crates/docs-crawler/src/: crawler.rs  downloader.rs  harvest.rs  llms_txt.rs  main.rs  organizer.rs  sitemap.rs
crates/durable-store/: Cargo.toml
crates/durable-store/migrations/: 001_schema.sql  002_indexes.sql  003_seed_boards.sql  004_add_eviction.sql
crates/durable-store/migrations/postgres/: 001_schema.sql  002_indexes.sql  003_add_eviction.sql  004_vendor_filesystem.sql  005_task_events.sql  006_ecosystem_catalog.sql  007_doc_pages.sql
crates/durable-store/src/: lib.rs  migrate.rs  types.rs
crates/engineering-coworker/: Cargo.toml
crates/engineering-coworker/src/: main.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: db.rs  main.rs  parser.rs  walker.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: crawler.rs  main.rs  server.rs  tools.rs
crates/schema/: Cargo.toml
crates/schema-export/: Cargo.toml
crates/schema-export/src/: main.rs
crates/schema/src/: agent.rs  job.rs  lib.rs  skill.rs  task.rs  vendor.rs
crates/task-bootstrap/: Cargo.toml
crates/task-bootstrap/src/: main.rs
crates/task-state-machine/: Cargo.toml
crates/task-state-machine/src/: fsm.rs  lib.rs
docs/docs/claude.com/docs/: index.md
docs/docs/claude.com/docs/connectors/: directory.md  overview.md
docs/docs/claude.com/docs/cowork/: changelog.md  monitoring.md
docs/docs/claude.com/docs/office-agents/: connectors-and-skills.md  dictation.md  enterprise-readiness.md  excel.md  fsi-plugins.md  outlook.md  powerpoint.md  third-party-platforms.md  word.md  work-across-apps.md
docs/docs/claude.com/docs/plugins/: overview.md  submit.md
plugins/cwc-design/: LICENSE  README.md  gates.toml
plugins/cwc-design/.claude-plugin/: plugin.json
plugins/cwc-design/agents/: design-coworker.md
plugins/cwc-design/commands/: design.md
plugins/cwc-design/mcp/: servers.json
plugins/cwc-design/skills/design-playbook/: SKILL.md
profiles/: claude_desktop_chat.json  claude_desktop_code.json  claude_desktop_cowork.json  switch-profile.sh
schemas/: task-session.schema.json
scripts/: cf-tag-resources.sh  cloud-env.env  commit-tested.sh  session-start.sh  setup-vendors.sh  setup.sh
scripts/agents/: agents.ts  generate.ts  schema.ts
scripts/lsp/: query.py  setup.sh
scripts/screenshots/: screenshot.py
scripts/toolchain/: setup-linux.sh  setup-mac.sh
scripts/wc2026/: setup.sh
sessions/: .gitignore  CLAUDE.md  DEPENDENCIES.md  handoff-2026-06-30.json  scheduled-tasks.json  session-index.json  tasks.yaml
sessions/plans/: docs-crawler-rs.md  docs-crawler-ts.md
workers/cron/: job_alert.py  package.json  wrangler.toml
workers/cron/boards/: greenhouse.yaml  lever.yaml  unknown.yaml
workers/cron/skills/: cloudflare-boards-crawled.skill  cloudflare-github-pushed.skill  cloudflare-migration-applied.skill  cloudflare-worker-deployed.skill
workers/cron/src/: index.ts
workers/wc2026-bracket/: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json  wrangler.toml
workers/wc2026-bracket/assets/: index.html
workers/wc2026-bracket/migrations/: 0001_bracket.sql  0002_latest_scores.sql  0003_penalties.sql  0004_penalty_scores.sql  0005_real_bracket.sql  0006_kickoff_times.sql
workers/wc2026-bracket/prototypes/: RESEARCH.md  svg-radial.html
workers/wc2026-bracket/scripts/: preview-server.mjs  render-preview.mjs
workers/wc2026-bracket/src/: agent-context.json  index.ts  layout.ts
workers/wc2026-bracket/tests/: render.spec.ts
workers/web/: package-lock.json  package.json  wrangler.toml
workers/web/src/: index.ts
(+295 files in other folders)
