[package]
name = "design-coworker"
edition.workspace = true
rust-version.workspace = true
description = "MCP server: the design coworker. Owns an 8-token design system, lints token sets (WCAG contrast), builds Claude Hardware Buddy character-pack artifacts from tokens, and gates artifact publishing behind operator approval surfaced on the buddy device."

[[bin]]
name = "design-coworker"
path = "src/main.rs"

[lib]
name = "design_coworker"
path = "src/design.rs"

[dependencies]
rmcp    = { version = "1", features = ["server", "transport-io", "schemars", "macros"] }
serde         = { workspace = true }
serde_json    = { workspace = true }
schemars      = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow        = { workspace = true }
clap          = { workspace = true }
