[package]
name        = "indexer"
edition.workspace = true
rust-version.workspace = true
description = "Vendor filesystem indexer — walks vendors/{org}/{repo}, extracts symbols, writes to fact_filesystem + dim_file_ast"

[[bin]]
name = "subagentjobs-indexer"
path = "src/main.rs"

[dependencies]
schema       = { path = "../schema" }
durable-store = { path = "../durable-store" }
tokio.workspace    = true
anyhow.workspace   = true
serde.workspace    = true
serde_json.workspace = true
tracing.workspace  = true
tracing-subscriber.workspace = true
sha2.workspace     = true
hex.workspace      = true
sqlx.workspace     = true
clap.workspace     = true

# Filesystem walking — respects .gitignore, .ignore, etc.
walkdir = "2"
ignore  = "0.4"

# TOML parsing for .vendors.toml
toml = "0.8"

# Symbol extraction via regex (tree-sitter upgrade path later)
regex     = "1"
once_cell = "1"
