[package]
name = "mcp-server"
edition.workspace = true
rust-version.workspace = true
[dependencies]
schema = { path = "../schema" }
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
